--- a/OTA/platformio.ini
+++ b/OTA/platformio.ini
@@ -9,16 +9,19 @@
 ; https://docs.platformio.org/page/projectconf.html
 ;https://randomnerdtutorials.com/esp32-ota-over-the-air-vs-code/
 ;https://github.com/Juerd/thermo/blob/master/thermo.ino
-[env:esp32doit-devkit-v1]
-platform = espressif32
-board = esp32doit-devkit-v1
+[env:esp12e]
+platform = espressif8266
+board = esp12e
 framework = arduino
 monitor_speed = 115200
 upload_speed = 460800
-lib_deps = https://github.com/me-no-dev/ESPAsyncWebServer.git
+build_flags = -D
+lib_deps = https://github.com/me-no-dev/ESPAsyncWebServer
+           https://github.com/me-no-dev/ESPAsyncTCP 
            ayushsharma82/AsyncElegantOTA
            arduino-libraries/Arduino_JSON
            juerd/ESP-WiFiSettings@^3.8.0
            MQTT
            OneWire
            DallasTemperature
+board_build.filesystem = littlefs
