--- a/TemperatureSensorTest/platformio.ini
+++ b/TemperatureSensorTest/platformio.ini
@@ -8,11 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp8285]
+[env:esp12e]
 platform = espressif8266
-board = esp8285
-upload_port = COM6
-monitor_port = COM6
+board = esp12e
 monitor_speed = 115200
 framework = arduino
 lib_deps = milesburton/DallasTemperature@^3.11.0
